@@ -1,5 +1,12 @@
 2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* pychecker/CodeChecks.py:
+	  Rearrange opcodes for 2.7, without implementing new or
+	  changed opcodes.
+	  Brings 2.7 test failures from 54 to 33.
+
+2010-12-18  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* HACKING:
 	  Add notes on updating to newer Python version.
 	* pychecker/OP.py:
